# python

./: fantasy_zookeeper.ipynb  hello.py  pandas.ipynb  pyproject.toml  the-fantasy-zookeeper.ipynb
exercises/: matplotlib.ipynb  rsp.py  the-alien-invasion.ipynb  the-great-iris-festival.ipynb  tictactoe.ipynb
