[tool.poetry]
name = "pythonML"
version = "0.1.0"
description = "first Machine Learning Project"
authors = ["Daniel Moreno <danieljmoreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
jupyter = "^1.0.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
